# calby-chat

./: Cargo.toml  README.md  build.rs
migrations/2022-07-20-202315_chat/: down.sql  up.sql
proto/: calby_chat.proto  chats.proto
src/: client.rs  gRPC.rs  g_rpc.rs  main.rs  model.rs  models.rs  schema.rs
src/dbpool/: mod.rs
src/src/: schema.rs
