[package]
name = "calby-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tonic = "0.7"
prost = "0.10"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
postgres = "0.19.3"
bb8 = "0.8"
bb8-postgres = "0.8"
[build-dependencies]
tonic-build = "0.7"
