[package]
name = "calby-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tonic = "0.7"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "serde_json"] }
postgres = "0.19.3"
bb8 = "0.7"
bb8-diesel = "0.2.1"
bb8-postgres = "0.7"
dotenv = "0.15.0"
[build-dependencies]
tonic-build = "0.7"
