[package]
name = "calby-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4.17"
tonic = "0.7"
prost = "0.10"
prost-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric"] }
postgres = "0.19.3"
chrono = "0.4.20"
bb8 = "0.7"
bb8-diesel = "0.2.1"
bb8-postgres = "0.7"
dotenv = "0.15.0"
[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "chats-client"
path = "src/client.rs"
[[bin]]
name = "chats-server"
path = "src/main.rs"
